v2.0.0a1/_sources/examples/index.rst.txt
:orphan:

Examples
========

We provide several examples of how to use SMAC with Python. Practical use-cases were chosen to show the
variety of SMAC.


.. raw:: html

    <div class="sphx-glr-thumbnails">


.. raw:: html

    </div>

Basics
------


.. raw:: html

    <div class="sphx-glr-thumbnails">


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="An example of applying SMAC to optimize a synthetic function (2D Rosenbrock function).">

.. only:: html

  .. image:: /examples/1_basics/images/thumb/sphx_glr_1_synthetic_function_thumb.png
    :alt: Synthetic Function

  :ref:`sphx_glr_examples_1_basics_1_synthetic_function.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Synthetic Function</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="An example of optimizing a simple support vector machine on the IRIS dataset. We use the hyperp...">

.. only:: html

  .. image:: /examples/1_basics/images/thumb/sphx_glr_2_svm_cv_thumb.png
    :alt: Support Vector Machine with Cross-Validation

  :ref:`sphx_glr_examples_1_basics_2_svm_cv.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Support Vector Machine with Cross-Validation</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This examples show how to use the Ask-and-Tell interface.">

.. only:: html

  .. image:: /examples/1_basics/images/thumb/sphx_glr_3_ask_and_tell_thumb.png
    :alt: Ask-and-Tell

  :ref:`sphx_glr_examples_1_basics_3_ask_and_tell.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Ask-and-Tell</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Using callbacks is the easieast way to integrate custom code inside the Bayesian optimization l...">

.. only:: html

  .. image:: /examples/1_basics/images/thumb/sphx_glr_4_callback_thumb.png
    :alt: Custom Callback

  :ref:`sphx_glr_examples_1_basics_4_callback.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Custom Callback</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Example for optimizing a Multi-Layer Perceptron (MLP) setting priors over the optimum on the hy...">

.. only:: html

  .. image:: /examples/1_basics/images/thumb/sphx_glr_5_priors_thumb.png
    :alt: User Priors over the Optimum

  :ref:`sphx_glr_examples_1_basics_5_priors.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">User Priors over the Optimum</div>
    </div>


.. raw:: html

    </div>

Multi-Fidelity and Multi-Instances
----------------------------------




.. raw:: html

    <div class="sphx-glr-thumbnails">


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Example for optimizing a Multi-Layer Perceptron (MLP) using multiple budgets. Since we want to ...">

.. only:: html

  .. image:: /examples/2_multi_fidelity/images/thumb/sphx_glr_1_mlp_epochs_thumb.png
    :alt: Multi-Layer Perceptron Using Multiple Epochs

  :ref:`sphx_glr_examples_2_multi_fidelity_1_mlp_epochs.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Multi-Layer Perceptron Using Multiple Epochs</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Example for optimizing a Multi-Layer Perceptron (MLP) across multiple (dataset) instances.">

.. only:: html

  .. image:: /examples/2_multi_fidelity/images/thumb/sphx_glr_2_sgd_datasets_thumb.png
    :alt: Stochastic Gradient Descent On Multiple Datasets

  :ref:`sphx_glr_examples_2_multi_fidelity_2_sgd_datasets.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Stochastic Gradient Descent On Multiple Datasets</div>
    </div>


.. raw:: html

    </div>

Multi-Objective
---------------




.. raw:: html

    <div class="sphx-glr-thumbnails">


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="A simple example on how to use multi-objective optimization is shown. The schaffer function is ...">

.. only:: html

  .. image:: /examples/3_multi_objective/images/thumb/sphx_glr_1_schaffer_thumb.png
    :alt: 2D Schaffer Function with Objective Weights

  :ref:`sphx_glr_examples_3_multi_objective_1_schaffer.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">2D Schaffer Function with Objective Weights</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="An example of how to use multi-objective optimization with ParEGO. Both accuracy and run-time a...">

.. only:: html

  .. image:: /examples/3_multi_objective/images/thumb/sphx_glr_2_parego_thumb.png
    :alt: ParEGO

  :ref:`sphx_glr_examples_3_multi_objective_2_parego.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">ParEGO</div>
    </div>


.. raw:: html

    </div>

Command-Line Interface
----------------------

SMAC can call a target function from a script. This is useful if you want to optimize non-python code.


.. raw:: html

    <div class="sphx-glr-thumbnails">


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This simple example shows how to call a script with the following content:">

.. only:: html

  .. image:: /examples/5_commandline/images/thumb/sphx_glr_1_call_target_function_script_thumb.png
    :alt: Call Target Function From Script

  :ref:`sphx_glr_examples_5_commandline_1_call_target_function_script.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Call Target Function From Script</div>
    </div>


.. raw:: html

    </div>


.. toctree::
   :hidden:
   :includehidden:

   /examples/1_basics/index.rst
   /examples/2_multi_fidelity/index.rst
   /examples/3_multi_objective/index.rst
   /examples/5_commandline/index.rst


.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-gallery

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download all examples in Python source code: examples_python.zip </examples/examples_python.zip>`

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download all examples in Jupyter notebooks: examples_jupyter.zip </examples/examples_jupyter.zip>`
